<resources>
    <string name="app_name">FYP_artefact</string>
    <string name="click_here">click here</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="store_id">store_ID</string>
    <string name="title">Simple Management</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">confirm password</string>
    <string name="store_name">store name</string>
    <string name="women">Women</string>
    <string name="mens">Mens</string>
    <string name="update_items">Update Items</string>
    <string name="add_items">Add Items</string>
    <string name="uniqueid">UniqueID</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="price">price</string>
    <string name="item_name">Item name</string>
    <string name="men">Men</string>
    <string name="IDmens" translatable="false">[Must Starts\n with \'M\']</string>
    <string name="prompt">!!Categories are either Men, Women or General Only!!</string>
    <string name="item_list">Item List</string>
    <string name="delete_items">Delete Items</string>
    <string name="delete_all">Delete All</string>
</resources>