<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="#BFECB0">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title"
        android:textSize="34sp"
        android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:backgroundTint="#C1D3AE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ev_sName"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/store_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/ev_sID"
                android:layout_width="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/rectangle"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/store_id"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ev_pass"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:background="@drawable/rectangle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ev_cPass"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#AFD653"
        android:text="@string/create_an_account"
        android:textColor="#6D4C41" />

</LinearLayout>