<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Add_Items">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="#BFECB0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="34sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

            <EditText
                android:id="@+id/ev_menName"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ev_menPrice"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_menName" />

            <EditText
                android:id="@+id/ev_menQuantity"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/ev_menPrice"
                app:layout_constraintEnd_toStartOf="@+id/ev_menPrice" />

            <EditText
                android:id="@+id/ev_category"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_aItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#50C10A"
        android:text="@string/add_items" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textColor="#336C0A" />

</LinearLayout>